# blue-planet

./: CMakeLists.txt  Matrices.cpp  README.md  Vectors.cpp  main.cpp
shaders/: triangle_frag.glsl  triangle_vert.glsl
